...
        backgroundColor: Theme.of(context).colorScheme.primary,
        leading: Builder(
          key: const Key('hippotherapy_hamburger_menu'),
          builder: (final BuildContext context) {
            return IconButton(
...
                  // Email Field
                  _buildFormField(
                    key: const ValueKey('emailField'),
                    name: 'email',
                    label: 'Email (Required)',
...
                    validator: FormBuilderValidators.compose([
                      FormBuilderValidators.required(
                          errorText: 'Email is required'),
                      FormBuilderValidators.maxLength(30,
                          errorText: 'Email must be at most 30 characters'),
                      FormBuilderValidators.email(
                          errorText: 'Please enter a valid email'),
                    ]),
                    keyboardType: TextInputType.emailAddress,
...
                  // Password Field
                  _buildFormField(
                    key: const ValueKey('passwordField'),
                    name: 'password',
                    label: 'Password (Required)',
...
                    validator: FormBuilderValidators.compose([
                      FormBuilderValidators.required(
                          errorText: 'Password is required'),
                      FormBuilderValidators.minLength(6,
                          errorText: 'Password must be at least 6 characters'),
                      FormBuilderValidators.maxLength(20,
                          errorText: 'Password must be at most 20 characters'),
                      FormBuilderValidators.hasSpecialChars(
                          atLeast: 1,
                          errorText:
                              'Password must contain at least one special character'),
                      FormBuilderValidators.hasNumericChars(
                          atLeast: 1,
                          errorText:
                              'Password must contain at least one number'),
                      FormBuilderValidators.hasUppercaseChars(
                          atLeast: 1,
                          errorText:
                              'Password must contain at least one uppercase character'),
                      FormBuilderValidators.hasLowercaseChars(
                          atLeast: 1,
                          errorText:
                              'Password must contain at least one lowercase character'),
                    ]),
                  ),
                  // First Name Field
                  _buildFormField(
                    key: const ValueKey('fNameField'),
                    name: 'fName',
                    label: 'First Name (Required)',
...
                    validator: FormBuilderValidators.compose([
                      FormBuilderValidators.required(
                          errorText: 'First name is required'),
                      FormBuilderValidators.maxLength(20,
                          errorText:
                              'First name must be at most 20 characters'),
                    ]),
                  ),
                  // Last Name Field
                  _buildFormField(
                    key: const ValueKey('lNameField'),
                    name: 'lName',
                    label: 'Last Name (Required)',
...
                    validator: FormBuilderValidators.compose([
                      FormBuilderValidators.required(
                          errorText: 'Last name is required'),
                      FormBuilderValidators.maxLength(20,
                          errorText: 'Last name must be at most 20 characters'),
                    ]),
                  ),
                  // Country Field
                  _buildFormField(
                    key: const ValueKey('countryField'),
                    name: 'country',
                    label: 'Country',
...
                        RegExp(r'^[a-zA-Z\s]+$'),
                        errorText:
                            'Country must contain only letters and spaces',
                        checkNullOrEmpty: false,
                      ),
                      FormBuilderValidators.maxLength(20,
                          errorText: 'Country must be at most 20 characters',
                          checkNullOrEmpty: false),
                    ]),
...
                  // City Field
                  _buildFormField(
                    key: const ValueKey('cityField'),
                    name: 'city',
                    label: 'City',
...
                      FormBuilderValidators.match(
                        RegExp(r'^[a-zA-Z\s]+$'),
                        errorText: 'City must contain only letters and spaces',
                        checkNullOrEmpty: false,
                      ),
                      FormBuilderValidators.maxLength(20,
                          errorText: 'City must be at most 20 characters.',
                          checkNullOrEmpty: false),
                    ]),
...
                  // Street Field
                  _buildFormField(
                    key: const ValueKey('streetField'),
                    name: 'street',
                    label: 'Street',
...
                        RegExp(r"^[A-Za-zÀ-ÿ0-9\s.,\-'\/]+$"),
                        errorText:
                            'Street must contain only letters, numbers, spaces, and common punctuation.',
                        checkNullOrEmpty: false,
                      ),
                      FormBuilderValidators.maxLength(20,
                          errorText: 'Street must be at most 20 characters.',
                          checkNullOrEmpty: false),
                    ]),
...
                  // Postal Code Field
                  _buildFormField(
                    key: const ValueKey('postalCodeField'),
                    name: 'postalCode',
                    label: 'Postal Code',
                    validator: FormBuilderValidators.match(
                      RegExp(r'^[A-Za-z]\d[A-Za-z][ -]?\d[A-Za-z]\d$'),
                      errorText: 'Postal code should be in the form L#L #L#.',
                      checkNullOrEmpty: false,
                    ),
...
                  else
                    ElevatedButton(
                      key: const ValueKey('registerButton'),
                      onPressed: _register,
                      child: const Text('Register'),
                    ),
                  const SizedBox(height: 20),
...
